ShowMenuScreen function & Menu-bar updated
Fixed ShowMenuScreen et Menu-Bar

--- a/html/app.component.html
+++ b/html/app.component.html
@@ -34,16 +34,13 @@
 
 <div class="mobile-menu-screen" *ngIf="showMenuScreen">
     <div class="a-box"><div class="vertical-middle">
-        <a [routerLink]="['Services']" (click)="MenuOff()">Services</a>
+        <a [routerLink]="['Infos']" (click)="MenuOff()">Infos</a>
     </div></div>
     <div class="a-box"><div class="vertical-middle">
-        <a [routerLink]="['References']" (click)="MenuOff()">References</a>
+        <a [routerLink]="['Galerie']" (click)="MenuOff()">Galerie</a>
     </div></div>
     <div class="a-box"><div class="vertical-middle">
-        <a [routerLink]="['Company']" (click)="MenuOff()">Company</a>
-    </div></div>
-    <div class="a-box"><div class="vertical-middle">
-        <a [routerLink]="['Blog']" (click)="MenuOff()">Blog</a>
+        <a [routerLink]="['Groupe']" (click)="MenuOff()">Le Groupe</a>
     </div></div>
     <div class="a-box"><div class="vertical-middle">
         <a [routerLink]="['Contact']" (click)="MenuOff()">Contact</a>
