--- a/sass/app.component.scss
+++ b/sass/app.component.scss
@@ -11,7 +11,7 @@ $footer-color: black;
   min-height: 50px;
   left: 0;
   right: 0;
-  background: darkgrey;
+  background: rgba(227, 228, 220, 0.5);
   position: fixed;
   .menu-link {
     margin-left: auto;
@@ -55,7 +55,7 @@ $footer-color: black;
   justify-content: center; /* center items vertically, in this case */
   align-items: center;
   // background: red; /* Debug-color */
-  background: $theme-color;
+  background: rgba(227, 228, 220, 0.5);
   position: fixed;
   top: 50px;
   left: 0;
