--- a/html/app.component.html
+++ b/html/app.component.html
@@ -4,7 +4,7 @@
             <nav class="logo-bar">
                 <div class="margin"></div>
                 <div class="content">
-                    <img src="images/logos/jam-logo.png" height="100px">
+                    <a [routerLink]="['Infos']"><img src="images/logos/jam-logo.png" height="100px"></a>
                 </div>
                 <div class="margin"></div>
             </nav>
@@ -24,7 +24,7 @@
             <p>Une association de l'ESSEC Business School</p>
             <br>
             <br>
-            <img src="images/logos/essec-logo.png" width="200px">
+            <a href="http://www.essec.edu/fr/"><img src="images/logos/essec-logo.png" width="200px"></a>
             <br>
             <br>
             <p>...the musical spirit</p>
@@ -50,7 +50,7 @@
 <div class="mobile-menu">
     <div class="margin"></div>
     <div class="content">
-        <img src="images/logos/jam-logo.png" height="50px">
+        <a [routerLink]="['Infos']"><img src="images/logos/jam-logo.png" height="50px"></a>
     </div>
     <div class="margin"></div>
     <div class="menu-link" (click)="MenuToggle()">
