--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,13 +2,13 @@
 
 h1 {
   color: #444;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Cambria, Georgia, sans-serif;
   font-size: 250%;
 }
 
 h2, h3 {
   color: #444;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Cambria, Georgia, sans-serif;
   font-weight: lighter;
 }
 
