--- a/html/app.component.html
+++ b/html/app.component.html
@@ -24,7 +24,7 @@
             <p>Une association de l'ESSEC Business School</p>
             <br>
             <br>
-            <a href="http://www.essec.edu/fr/"><img src="images/logos/essec-logo.png" width="200px"></a>
+            <a href="http://www.essec.edu/fr/" target="_blank"><img src="images/logos/essec-logo.png" width="200px"></a>
             <br>
             <br>
             <p>...the musical spirit</p>
