--- a/html/galerie.component.html
+++ b/html/galerie.component.html
@@ -1,6 +1,13 @@
 <div class="pageinfo-bar">
     <div class="margin"></div>
     <body>
+        <br>
+        <div class="content">
+            <h1>Bienvenue dans la Galerie !</h1>
+            <p *ngIf="description">{{description}}</p>
+        </div>
+        <br>
+        <div class="margin"></div>
     <!-- Début galerie -->
     <div class="container-fluid">
         <div class="row">
@@ -8,21 +15,21 @@
                 <section class="tm-header-gallery">
 
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
-                            <img src="/images/photos/image1.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                            <img src="/images/photos/image2.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                            <img src="/images/photos/image1.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
+                            <img src="/images/photos/image2.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
                     </div>
 
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
 
                         <div class="tm-site-name">
-                            <h1 class="text-uppercase tm-site-name-h1">Bienvenue dans la galerie !</h1>
-                            <h2 class="tm-site-name-h2">Quelques photos de nos prestations</h2>
+                            <h1 class="text-uppercase tm-site-name-h1">Crédits: Adélie Conan ©</h1>
+                           <!-- <h2 class="tm-site-name-h2">Quelques photos de nos prestations</h2> -->
                         </div>
                     </div>
 
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
-                            <img src="/images/photos/image3.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                            <img src="/images/photos/jam-header.jpg" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                            <img src="/images/photos/image2.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
+                            <img src="/images/photos/image3.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
                     </div>
 
                 </section>
@@ -48,10 +55,10 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 tm-services-col-left">
 
                 <div>
-                    <img src="img/img-11-01.jpg" alt="Image" class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0">
-                    <img src="img/img-11-07.jpg" alt="Image" class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0">
-                    <img src="img/img-11-08.jpg" alt="Image" class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0">
-                    <img src="img/img-11-05.jpg" alt="Image" class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0">
+                    <img src="/images/photos/image4.jpg" alt="Image" class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+                    <img src="/images/photos/image4.jpg" alt="Image" class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+                    <img src="/images/photos/image4.jpg" alt="Image" class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+                    <img src="/images/photos/image4.jpg" alt="Image" class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
                 </div>
 
             </div>
@@ -59,7 +66,6 @@
 
     </div> <!-- container-fluid -->
 
-    <!-- Preloader, https://ihatetomatoes.net/create-custom-preloading-screen/ -->
     <div id="loader-wrapper">
 
         <div id="loader"></div>
