Video added with posters

--- a/html/galerie.component.html
+++ b/html/galerie.component.html
@@ -28,10 +28,9 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
-                            <img src="/images/photos/image2.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
-                            <img src="/images/photos/image3.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
+                        <video src="/videos/JAM-prestations-JAZZ.mp4" width="500px" controls preload="auto" poster="/images/posters/Prestations-JAZZ.png">Nos prestations JAZZ</video>
+                        <video src="/videos/Vidéo%20AA%20JAM%20(low).mp4" width="500px" controls preload="auto" poster="/images/posters/Accueil-Admissibles.png">Vidéo pour l'accueil des admissibles de l'ESSEC !</video>
                     </div>
-
                 </section>
             </div>
         </div>
