--- a/html/galerie.component.html
+++ b/html/galerie.component.html
@@ -13,23 +13,14 @@
         <div class="row">
             <div class="col-lg-12">
                 <section class="tm-header-gallery">
-
-                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
-                            <img src="/images/photos/image1.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
-                            <img src="/images/photos/image2.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
-                    </div>
-
-                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
-
-                        <div class="tm-site-name">
-                            <h1 class="text-uppercase tm-site-name-h1">Crédits: Adélie Conan ©</h1>
-                           <!-- <h2 class="tm-site-name-h2">Quelques photos de nos prestations</h2> -->
-                        </div>
-                    </div>
-
                     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
                         <video src="/videos/JAM-prestations-JAZZ.mp4" width="500px" controls preload="auto" poster="/images/posters/Prestations-JAZZ.png">Nos prestations JAZZ</video>
                         <video src="/videos/Vidéo%20AA%20JAM%20(low).mp4" width="500px" controls preload="auto" poster="/images/posters/Accueil-Admissibles.png">Vidéo pour l'accueil des admissibles de l'ESSEC !</video>
+                    </div>
+                    <br>
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
+                        <img src="/images/photos/image1.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
+                        <img src="/images/photos/image2.png" alt="Image" class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
                     </div>
                 </section>
             </div>
@@ -42,9 +33,8 @@
         <div class="row tm-services-row-2">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 tm-services-col">
                 <div class="tm-about-box-3 tm-services-box-3 tm-blue-bordered">
-                    <h2 class="tm-services-title tm-blue-text">Deuxième série !</h2>
-                    <p class="tm-about-description-3"><em>Toujours plus de photos</em></p>
-                    <p class="tm-about-description-3">Bien t'as vu ?</p>
+                    <h2 class="tm-services-title tm-blue-text">Concert Gala ESSEC Grande Ecole du BDE Pandora</h2>
+                    <p class="tm-about-description-3"><em>Pavillon Royal, 4 mai 2018</em></p>
                 </div>
             </div>
         </div>
@@ -62,7 +52,16 @@
 
             </div>
         </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
 
+            <div class="tm-site-name">
+                <h1 class="text-uppercase tm-site-name-h1">Crédits:</h1>
+                <h1 class="text-uppercase tm-site-name-h1">Adélie Conan ©</h1>
+                <h1 class="text-uppercase tm-site-name-h1">ESSECLive ©</h1>
+
+                <!-- <h2 class="tm-site-name-h2">Quelques photos de nos prestations</h2> -->
+            </div>
+        </div>
     </div> <!-- container-fluid -->
 
     <div id="loader-wrapper">
