--- a/html/contact.component.html
+++ b/html/contact.component.html
@@ -14,7 +14,7 @@
   <!-- Add icon library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- Add font awesome icons -->
+    <!-- Add font icons -->
     <a href="https://www.facebook.com/james.sec.56" class="fa fa-facebook" target="_blank"></a>
     <a href="https://twitter.com/essecjam" class="fa fa-twitter" target="_blank"></a>
     <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022" class="fa fa-google"></a>
