--- a/html/groupe.component.html
+++ b/html/groupe.component.html
@@ -8,8 +8,16 @@
 </div>
 <div class="content-wrapper">
   <div class="margin"></div>
-  <div class="content">
-    <p *ngIf="content">{{content}}</p>
+  <div class="carrousel">
+    <div id="slider">
+      <figure>
+        <img src="/images/photos/Jammeux/Adélie%20Conan%20Chanteuse%20Présidente.JPG" alt>
+        <img src="/images/photos/Jammeux/Baptiste%20Lefort%20Bassiste%20Trésorier.JPG" alt>
+        <img src="/images/photos/Jammeux/Emilie%20Taieb%20Chanteuse.JPG" alt>
+        <img src="/images/photos/Jammeux/Félix%20Perreau%20Guitariste.JPG" alt>
+        <img src="/images/photos/Jammeux/Adélie%20Conan%20Chanteuse%20Présidente.JPG" alt>
+      </figure>
+    </div>
   </div>
   <div class="margin"></div>
 </div>
