--- a/css/app.component.css
+++ b/css/app.component.css
@@ -219,6 +219,14 @@
   text-align: center;
 }
 
+.carrousel {
+  display: flex;
+  margin: 0px 0px 0px;
+  background: white;
+  text-align: center;
+  position: relative;
+}
+
 .pageinfo-bar {
   display: flex;
   width: 100%;
