--- a/html/groupe.component.html
+++ b/html/groupe.component.html
@@ -8,16 +8,63 @@
 </div>
 <div class="content-wrapper">
   <div class="margin"></div>
-  <div class="carrousel">
+  <div class="carrousel" style="text-align-all: center">
     <div id="slider">
       <figure>
-        <img src="/images/photos/Jammeux/Adélie%20Conan%20Chanteuse%20Présidente.JPG" alt>
+        <img src="/images/photos/Jammeux/Gabriel%20Gintz%20Saxophoniste.JPG" alt>
         <img src="/images/photos/Jammeux/Baptiste%20Lefort%20Bassiste%20Trésorier.JPG" alt>
         <img src="/images/photos/Jammeux/Emilie%20Taieb%20Chanteuse.JPG" alt>
-        <img src="/images/photos/Jammeux/Félix%20Perreau%20Guitariste.JPG" alt>
-        <img src="/images/photos/Jammeux/Adélie%20Conan%20Chanteuse%20Présidente.JPG" alt>
+        <img src="/images/photos/Jammeux/Hugues%20Gallier%20Batteur.JPG" alt>
+        <img src="/images/photos/Jammeux/Gabriel%20Gintz%20Saxophoniste.JPG" alt>
       </figure>
     </div>
+    <table id="tableau" summary="Musiciens à JAM">
+      <thead>
+      <tr>
+        <th scope="col">Nom</th>
+        <th scope="col">Instrument</th>
+        <th scope="col">Années à JAM</th>
+        <th scope="col">Artiste préféré</th>
+      </tr>
+      </thead>
+      <tfoot>
+      <tr>
+        <td colspan="4">Dernière mise à jour: juin 2018</td>
+      </tr>
+      </tfoot>
+      <tbody>
+      <tr>
+        <td>Nom 1</td>
+        <td>Instrument 1</td>
+        <td>Nbre d'années</td>
+        <td>Sinatra</td>
+      </tr>
+      <tr>
+        <td>Nom 2</td>
+        <td>Instrument 2</td>
+        <td>Nbre d'années</td>
+        <td>Sinatra</td>
+      </tr>
+      <tr>
+        <td>Nom 3</td>
+        <td>Instrument 2</td>
+        <td>Nbre d'années</td>
+        <td>Sinatra</td>
+      </tr>
+      <tr>
+        <td>Nom 4</td>
+        <td>Instrument 1</td>
+        <td>Nbre d'années</td>
+        <td>Sinatra</td>
+      </tr>
+      <tr>
+        <td>Nom 5</td>
+        <td>Instrument 1</td>
+        <td>Nbre d'années</td>
+        <td>Sinatra</td>
+      </tr>
+      </tbody>
+    </table>
   </div>
   <div class="margin"></div>
 </div>
