--- a/css/app.component.css
+++ b/css/app.component.css
@@ -207,7 +207,7 @@
 .content-wrapper {
   display: flex;
   margin: 0px 0px 0px;
-  background: white;
+  background: rgba(227, 228, 220, 0.5);
   text-align: center;
   position: relative;
 }
@@ -222,9 +222,31 @@
 .carrousel {
   display: flex;
   margin: 0px 0px 0px;
-  background: white;
+  background: rgba(227, 228, 220, 0.5);
   text-align: center;
   position: relative;
+  float: right;
+}
+
+.carrousel h1 {
+  color: black;
+  font-family: Cambria, Georgia, sans-serif;
+  font-size: 24px;
+  text-align: center;
+}
+
+.carrousel h2 {
+  color: black;
+  font-family: Cambria, Georgia, sans-serif;
+  font-size: 16px;
+  text-align: center;
+}
+
+.carrousel h2 {
+  color: black;
+  font-family: Cambria, Georgia, sans-serif;
+  font-size: 10px;
+  text-align: center;
 }
 
 .pageinfo-bar {
