--- a/html/groupe.component.html
+++ b/html/groupe.component.html
@@ -7,7 +7,7 @@
   <div class="margin"></div>
 </div>
 <div class="content-wrapper">
-  <div class="margin"></div>
+  <!-- <div class="margin"></div> -->
   <div class="carrousel" style="text-align-all: center">
     <div id="slider">
       <figure>
@@ -66,5 +66,5 @@
       </tbody>
     </table>
   </div>
-  <div class="margin"></div>
+  <!-- <div class="margin"></div> -->
 </div>
