--- a/html/contact.component.html
+++ b/html/contact.component.html
@@ -1,15 +1,28 @@
 <div class="pageinfo-bar">
+  <div class="margin"></div>
+  <div class="content">
+    <h1>Suivez JAM sur les réseaux ou contactez-nous par mail !</h1>
+    <br>
     <div class="margin"></div>
-    <div class="content">
-        <h1>{{title}}</h1>
-        <p *ngIf="description">{{description}}</p>
-    </div>
-    <div class="margin"></div>
+  </div>
 </div>
+
 <div class="content-wrapper">
-    <div class="margin"></div>
-    <div class="content">
-        <p>{{content}}</p>
-    </div>
-    <div class="margin"></div>
+  <div class="margin"></div>
+  <div class="content">
+    <br>
+  <!-- Add icon library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Add font icons -->
+    <a href="https://www.facebook.com/james.sec.56" class="fa fa-facebook" target="_blank"></a>
+    <a href="https://twitter.com/essecjam" class="fa fa-twitter" target="_blank"></a>
+    <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022" class="fa fa-google"></a>
+    <a href="https://www.linkedin.com/company/jam-essec/" class="fa fa-linkedin"></a>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <br>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <br>
+  <div class="margin"></div>
+  </div>
 </div>
