--- a/html/galerie.component.html
+++ b/html/galerie.component.html
@@ -1,15 +1,160 @@
 <div class="pageinfo-bar">
-    <div class="margin"></div>
-    <div class="content">
-        <h1>{{title}}</h1>
-        <p *ngIf="description">{{description}}</p>
+  <div class="margin"></div>
+  <body>
+  <br>
+  <div class="content">
+    <h1>Bienvenue dans la Galerie !</h1>
+    <p *ngIf="description">{{description}}</p>
+  </div>
+  <br>
+  <!-- Début galerie -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <section class="tm-header-gallery">
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
+            <video src="/videos/JAM-prestations-JAZZ.mp4" width="500px" controls preload="auto"
+                   poster="/images/posters/Prestations-JAZZ.png">Nos prestations JAZZ
+            </video>
+            <video src="/videos/Vidéo%20AA%20JAM%20(low).mp4" width="500px" controls preload="auto"
+                   poster="/images/posters/Accueil-Admissibles.png">Vidéo pour l'accueil des admissibles de l'ESSEC !
+            </video>
+          </div>
+          <br>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
+            <img src="/images/photos/image1.png" alt="Image"
+                 class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
+            <img src="/images/photos/image2.png" alt="Image"
+                 class="img-fluid tm-header-img col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" width="500px">
+          </div>
+        </section>
+      </div>
     </div>
-    <div class="margin"></div>
-</div>
-<div class="content-wrapper">
-    <div class="margin"></div>
-    <div class="content">
-        <p>{{content}}</p>
+
+    <!-- GALA 2018 -->
+
+    <div class="row tm-services-row-2">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 tm-services-col">
+        <div class="tm-about-box-3 tm-services-box-3 tm-blue-bordered">
+          <h2 class="tm-services-title tm-blue-text">Concert Gala ESSEC Grande Ecole du BDE Pandora</h2>
+          <p class="tm-about-description-3"><em>Pavillon Royal, 4 mai 2018</em></p>
+        </div>
+      </div>
     </div>
-    <div class="margin"></div>
+
+    <div class="row tm-services-row">
+
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 tm-services-col-left">
+
+        <div>
+          <img src="/images/photos/image4.jpg" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+          <img src="/images/photos/image4.jpg" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+          <img src="/images/photos/image4.jpg" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+          <img src="/images/photos/image4.jpg" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+        </div>
+
+      </div>
+    </div>
+
+    <!-- CECP -->
+
+    <div class="row tm-services-row-2">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 tm-services-col">
+        <div class="tm-about-box-3 tm-services-box-3 tm-blue-bordered">
+          <h2 class="tm-services-title tm-blue-text">Concours tremplin CECP 2018, gagné par JAM ESSEC !</h2>
+          <p class="tm-about-description-3"><em>Pacific Rock, 26 mai 2018</em></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row tm-services-row">
+
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 tm-services-col-left">
+
+        <div>
+          <img src="/images/photos/image4.jpg" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+          <img src="/images/photos/image4.jpg" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+          <img src="/images/photos/image4.jpg" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+          <img src="/images/photos/image4.jpg" alt="Image"
+               class="img-fluid col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 tm-pad-0" width="500px">
+        </div>
+
+      </div>
+    </div>
+
+
+    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-pad-0">
+
+      <div class="tm-site-name">
+        <h1 class="text-uppercase tm-site-name-h1">Crédits:</h1>
+        <h1 class="text-uppercase tm-site-name-h1">Adélie Conan ©</h1>
+        <h1 class="text-uppercase tm-site-name-h1">ESSECLive ©</h1>
+
+        <!-- <h2 class="tm-site-name-h2">Quelques photos de nos prestations</h2> -->
+      </div>
+    </div>
+  </div> <!-- container-fluid -->
+
+  <div id="loader-wrapper">
+
+    <div id="loader"></div>
+    <div class="loader-section section-left"></div>
+    <div class="loader-section section-right"></div>
+
+  </div>
+
+  <!-- load JS files -->
+  <script src="js/jquery-1.11.3.min.js"></script>             <!-- jQuery (https://jquery.com/download/) -->
+  <script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
+  <!-- Tether for Bootstrap (http://stackoverflow.com/questions/34567939/how-to-fix-the-error-error-bootstrap-tooltips-require-tether-http-github-h) -->
+  <script src="js/bootstrap.min.js"></script>             <!-- Bootstrap (http://v4-alpha.getbootstrap.com/) -->
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <!-- Magnific popup (http://dimsemenov.com/plugins/magnific-popup/) -->
+  <script>
+
+    $(window).load(function () {
+
+      /* Gallery pop up
+      -----------------------------------------*/
+      $('.tm-header-gallery').magnificPopup({
+        delegate: 'a', // child items selector, by clicking on it popup will open
+        type: 'image',
+        gallery: {enabled: true}
+      });
+
+      // Tabs
+      // http://stackoverflow.com/questions/11645081/how-to-build-simple-tabs-with-jquery
+      $('.tm-tab-content-box').hide();
+      //$('#tab1C').fadeIn('slow');
+      $('#tab1C').show();
+
+      $('.tm-tab-link').click(function () {
+
+        var t = $(this).attr('id');
+
+        $('.tm-tab-link').removeClass('active');
+        $(this).addClass('active');
+
+        $('.tm-tab-content-box').hide();
+        $('#' + t + 'C').fadeIn('slow');
+
+      });
+
+      // Remove preloader
+      // https://ihatetomatoes.net/create-custom-preloading-screen/
+      $('body').addClass('loaded');
+
+    });
+
+  </script>
+
+  </body>
+  <div class="margin"></div>
 </div>
