--- a/html/groupe.component.html
+++ b/html/groupe.component.html
@@ -6,10 +6,142 @@
   </div>
   <div class="margin"></div>
 </div>
-<div class="content-wrapper">
+<div class="content-wrapper" style="align-content: center">
+  <br>
   <div class="margin"></div>
-  <div class="content">
-    <p *ngIf="content">{{content}}</p>
+  <div class="row">
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Emilie%20Taieb%20Chanteuse.JPG" alt="Jane" style="width:60%">
+        <div class="container">
+          <h2>Emilie Taieb</h2>
+          <p class="title">Chanteuse &amp; Rock</p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>example@example.com</p>
+          <p><button class="button">Contact</button></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Emilie%20Taieb%20Chanteuse.JPG" alt="Mike" style="width:60%">
+        <div class="container">
+          <h2>Emilie Taieb</h2>
+          <p class="title">Chanteuse &amp; Rock</p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>example@example.com</p>
+          <p><button class="button">Contact</button></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Emilie%20Taieb%20Chanteuse.JPG" alt="John" style="width:60%">
+        <div class="container">
+          <h2>Emilie Taieb</h2>
+          <p class="title">Chanteuse &amp; Rock</p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>example@example.com</p>
+          <p><button class="button">Contact</button></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Emilie%20Taieb%20Chanteuse.JPG" alt="John" style="width:60%">
+        <div class="container">
+          <h2>Emilie Taieb</h2>
+          <p class="title">Chanteuse &amp; Rock</p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>example@example.com</p>
+          <p><button class="button">Contact</button></p>
+        </div>
+      </div>
+    </div>
   </div>
+  <!--
+  <div id="monTrombi">
+    <img class="img_left" src="/images/photos/Jammeux/Baptiste%20Lefort%20Bassiste%20Trésorier.JPG"
+         alt="Baptiste Lefort"/>
+    <img class="img_left" src="/images/photos/Jammeux/Emilie%20Taieb%20Chanteuse.JPG" alt="Emilie Taieb"/>
+    <img class="img_left" src="/images/photos/Jammeux/Gabriel%20Gintz%20Saxophoniste.JPG" alt="Gabriel Gintz"/>
+    <img class="img_left" src="/images/photos/Jammeux/Hugues%20Gallier%20Batteur.JPG" alt="Hugues Gallier"/>
+    <img class="img_left" src="/images/photos/Jammeux/Jeremy%20Kulscar%20Guitariste.JPG" alt="Jeremy Kulcsar"/>
+    <img class="img_left" src="/images/photos/Jammeux/Juliette%20Denoble%20Mayer%20Chanteuse.JPG"
+         alt="Juliette Denoble-Mayer"/>
+    <img class="img_left" src="/images/photos/Jammeux/Julien%20Lecanu%20Chanteur.JPG" alt="Julien Lecanu"/>
+    <img class="img_left" src="/images/photos/Jammeux/Lara%20Van%20Daalen%20Chanteuse.JPG" alt="Lara Van Daalen"/>
+    <img class="img_left" src="/images/photos/Jammeux/Lotfi%20Ramdane%20Pianiste.JPG" alt="Lotfi Ramdane"/>
+    <img class="img_left" src="/images/photos/Jammeux/Marie%20Colas%20Violoniste.JPG" alt="Marie Colas Des Francs"/>
+    <img class="img_left" src="/images/photos/Jammeux/Philippine%20Gié%20Chanteuse%20Secrétaire%20Générale.JPG"
+         alt="Philippine Gié"/>
+    <img class="img_left" src="/images/photos/Jammeux/Thibaut%20Bertoux%20Flutiste.JPG" alt="Thibaut Bertoux"/>
+  </div>
+  <div class="margin"></div> -->
+  <!--
+  <div class="carrousel" style="text-align-all: center">
+    <div id="slider">
+      <figure>
+        <img src="/images/photos/Jammeux/Gabriel%20Gintz%20Saxophoniste.JPG" alt>
+        <img src="/images/photos/Jammeux/Baptiste%20Lefort%20Bassiste%20Trésorier.JPG" alt>
+        <img src="/images/photos/Jammeux/Emilie%20Taieb%20Chanteuse.JPG" alt>
+        <img src="/images/photos/Jammeux/Hugues%20Gallier%20Batteur.JPG" alt>
+        <img src="/images/photos/Jammeux/Gabriel%20Gintz%20Saxophoniste.JPG" alt>
+      </figure>
+    </div>
+    TEST DE TABLEAU
+    <table id="tableau" summary="Musiciens à JAM">
+      <thead>
+      <tr>
+        <th scope="col">Nom</th>
+        <th scope="col">Instrument</th>
+        <th scope="col">Années à JAM</th>
+        <th scope="col">Artiste préféré</th>
+      </tr>
+      </thead>
+      <tfoot>
+      <tr>
+        <td colspan="4">Dernière mise à jour: juin 2018</td>
+      </tr>
+      </tfoot>
+      <tbody>
+      <tr>
+        <td>Nom 1</td>
+        <td>Instrument 1</td>
+        <td>Nbre d'années</td>
+        <td>Sinatra</td>
+      </tr>
+      <tr>
+        <td>Nom 2</td>
+        <td>Instrument 2</td>
+        <td>Nbre d'années</td>
+        <td>Sinatra</td>
+      </tr>
+      <tr>
+        <td>Nom 3</td>
+        <td>Instrument 2</td>
+        <td>Nbre d'années</td>
+        <td>Sinatra</td>
+      </tr>
+      <tr>
+        <td>Nom 4</td>
+        <td>Instrument 1</td>
+        <td>Nbre d'années</td>
+        <td>Sinatra</td>
+      </tr>
+      <tr>
+        <td>Nom 5</td>
+        <td>Instrument 1</td>
+        <td>Nbre d'années</td>
+        <td>Sinatra</td>
+      </tr>
+      </tbody>
+    </table> FIN DE TEST DE TABLEAU
+
+  </div>
+-->
   <div class="margin"></div>
 </div>
