--- a/html/groupe.component.html
+++ b/html/groupe.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="margin"></div>
 </div>
-<div class="content-wrapper" style="align-content: center">
+<div class="content-wrapper" style="text-align: center">
   <br>
   <div class="margin"></div>
   <div class="row">
