New members to group (test)

--- a/html/groupe.component.html
+++ b/html/groupe.component.html
@@ -17,7 +17,7 @@
           <h2>Emilie Taieb</h2>
           <p class="title">Chanteuse &amp; Rock</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
+          <p>B00705734@essec.edu</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -25,12 +25,12 @@
 
     <div class="column">
       <div class="card">
-        <img src="/images/photos/Jammeux/Emilie%20Taieb%20Chanteuse.JPG" alt="Mike" style="width:60%">
+        <img src="/images/photos/Jammeux/Baptiste%20Lefort%20Bassiste%20Trésorier.JPG" alt="Mike" style="width:60%">
         <div class="container">
-          <h2>Emilie Taieb</h2>
-          <p class="title">Chanteuse &amp; Rock</p>
+          <h2>Baptiste Lefort</h2>
+          <p class="title">Bassiste &amp; Trésorier</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
+          <p>B00497520@essec.edu</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -38,10 +38,10 @@
 
     <div class="column">
       <div class="card">
-        <img src="/images/photos/Jammeux/Emilie%20Taieb%20Chanteuse.JPG" alt="John" style="width:60%">
+        <img src="/images/photos/Jammeux/Gabriel%20Gintz%20Saxophoniste.JPG" alt="John" style="width:60%">
         <div class="container">
-          <h2>Emilie Taieb</h2>
-          <p class="title">Chanteuse &amp; Rock</p>
+          <h2>Gabriel Gintz</h2>
+          <p class="title">Saxophoniste</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
           <p>example@example.com</p>
           <p><button class="button">Contact</button></p>
