Template groupe ready

--- a/html/groupe.component.html
+++ b/html/groupe.component.html
@@ -17,7 +17,7 @@
           <h2>Emilie Taieb</h2>
           <p class="title">Chanteuse &amp; Rock</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>B00705734@essec.edu</p>
+          <p>emilie.taieb@essec.edu</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -30,7 +30,7 @@
           <h2>Baptiste Lefort</h2>
           <p class="title">Bassiste &amp; Trésorier</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>B00497520@essec.edu</p>
+          <p>baptiste.lefort@essec.edu</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -43,7 +43,7 @@
           <h2>Gabriel Gintz</h2>
           <p class="title">Saxophoniste</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
+          <p>gabriel.gintz@essec.edu</p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
@@ -51,12 +51,12 @@
 
     <div class="column">
       <div class="card">
-        <img src="/images/photos/Jammeux/Emilie%20Taieb%20Chanteuse.JPG" alt="John" style="width:60%">
+        <img src="/images/photos/Jammeux/Hugues%20Gallier%20Batteur.JPG" alt="John" style="width:60%">
         <div class="container">
-          <h2>Emilie Taieb</h2>
-          <p class="title">Chanteuse &amp; Rock</p>
+          <h2>Hugues Gallier</h2>
+          <p class="title">Batteur </p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>example@example.com</p>
+          <p>hugues.gallier@essec.edu/p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
