--- a/css/groupe.component.css
+++ b/css/groupe.component.css
@@ -23,6 +23,7 @@ div#slider figure {
   left: 0;
   text-align: left;
   animation: 20s slidy infinite;
+
 }
 
 #tableau {
@@ -31,6 +32,7 @@ div#slider figure {
   width: 100%;
   text-align: left;
   border-collapse: collapse;
+  
 }
 #tableau th {
   font-size: 13px;
@@ -40,6 +42,7 @@ div#slider figure {
   border-top: 2px solid #d3ddff;
   border-bottom: 1px solid #fff;
   color: #039;
+  
 }
 #tableau td {
   padding: 8px;
@@ -80,9 +83,14 @@ div#slider figure {
 /* Three columns side by side */
 .column {
   float: left;
+  position:relative;
+ left: 250px;
+ bottom: 180px;
+  top: 30px;
   width: 33.3%;
   margin-bottom: 16px;
   padding: 0 8px;
+  
 }
 
 /* Display the columns below each other instead of side by side on small screens */
@@ -96,6 +104,7 @@ div#slider figure {
 /* Add some shadows to create a card effect */
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  
 }
 
 /* Some left and right padding inside the container */
