--- a/html/groupe.component.html
+++ b/html/groupe.component.html
@@ -18,7 +18,7 @@
           <p class="title">Chanteuse &amp; Rock</p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
           <p>emilie.taieb@essec.edu</p>
-          <p><button class="button">Contact</button></p>
+      <a href="mailto:jamsince1980@gmail.com?cc=other@domain.com&bcc=hidden@domain.com&subject=Enquiry%20regarding%20product%20#0022&body=I%20would%20like%20more%20information%20on%20product%20#0022">    <button class="button">Contact</button></a>
         </div>
       </div>
     </div>
@@ -56,12 +56,41 @@
           <h2>Hugues Gallier</h2>
           <p class="title">Batteur </p>
           <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-          <p>hugues.gallier@essec.edu/p>
+          <p>hugues.gallier@essec.edu </p>
           <p><button class="button">Contact</button></p>
         </div>
       </div>
     </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Jeremy%20Kulscar%20Guitariste.JPG" alt="John" style="width:60%">
+        <div class="container">
+          <h2>Jeremy Kulscar</h2>
+          <p class="title">Batteur </p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>Jeremy.Kulscar@essec.edu </p>
+          <p><button class="button">Contact</button></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="/images/photos/Jammeux/Julien%20Lecanu%20Chanteur.JPG" alt="John" style="width:60%">
+        <div class="container">
+          <h2>Julien Lecanu</h2>
+          <p class="title">Batteur </p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>julien.lecanu@essec.edu </p>
+          <p><button class="button">Contact</button></p>
+        </div>
+      </div>
+    </div>
+
   </div>
+
+  
   <!--
   <div id="monTrombi">
     <img class="img_left" src="/images/photos/Jammeux/Baptiste%20Lefort%20Bassiste%20Trésorier.JPG"
