--- a/css/app.component.css
+++ b/css/app.component.css
@@ -276,6 +276,7 @@
   color: black;
   background-color: rgba(227, 228, 220, 0.5);
   text-align: center;
+  position: relative;
 }
 
 /* max-width */
